--- a/responsive.css
+++ b/responsive.css
@@ -17,4 +17,17 @@
     footer{
         text-align: center;
     }
+
+    .btn{
+        width: 100%;
+    }
+
+    .facebook{
+        margin-bottom: 10px;
+    }
+
+    .top-wrapper{
+        text-align: left;
+        padding-top: 130px;
+    }
 }
