--- a/stylesheet.css
+++ b/stylesheet.css
@@ -105,10 +105,10 @@ header{
 .header-right{
     float:right;
     background-color: rgba(255, 255, 255,0.3);
-    transition: all 1.5s;
+    margin-right: -25px;
 }
 
-.header-right:hover{
+.header-right a:hover{
     background-color: rgba(255, 255, 255,0.8);
 }
 
@@ -117,6 +117,8 @@ header{
     padding: 0 25px;
     color: aliceblue;
     display: block;
+    float: left;
+    transition: all 1.5s;
 }
 
 .lesson-wrapper{
